--- a/src/Views/PluginSettings.xaml
+++ b/src/Views/PluginSettings.xaml
@@ -30,8 +30,8 @@
                     HorizontalAlignment="Right"
                     DockPanel.Dock="Right">
                     <TextBox
-                        MinWidth="100"
-                        MaxWidth="360"
+                        MinWidth="250"
+                        Width="Auto"
                         HorizontalAlignment="Left"
                         VerticalAlignment="Center"
                         Text="{Binding Settings.Longitude}"
@@ -45,18 +45,18 @@
                     <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Latitude" />
                 </StackPanel>
                 <StackPanel
-            Style="{StaticResource TextPanel}"
-            Margin="0,0,18,0"
-            Orientation="Horizontal"
-            HorizontalAlignment="Right"
-            DockPanel.Dock="Right">
+                    Style="{StaticResource TextPanel}"
+                    Margin="0,0,18,0"
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    DockPanel.Dock="Right">
                     <TextBox
-                    MinWidth="100"
-                    MaxWidth="360"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
-                Text="{Binding Settings.Latitude}"
-                TextWrapping="NoWrap" />
+                    MinWidth="250"
+                    Width="Auto"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    Text="{Binding Settings.Latitude}"
+                    TextWrapping="NoWrap" />
                 </StackPanel>
             </ItemsControl>
         </Border>
@@ -65,25 +65,24 @@
             <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition MinWidth="250" Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0" Margin="0,0,18,0">
+        <StackPanel Grid.Column="0" Margin="20,0,10,0">
             <TextBlock Style="{DynamicResource SettingTitleLabel}" Text="Tune parameter" />
             <TextBlock Style="{DynamicResource SettingSubTitleLabel}" Text="Accepts comma separated values (denoting addition / substraction in minutes)" />
-            <TextBlock Style="{DynamicResource SettingSubTitleLabel}" Text="in the following order" />
+            <TextBlock Style="{DynamicResource SettingSubTitleLabel}" Text="in the following order:" />
             <TextBlock Style="{DynamicResource SettingSubTitleLabel}" Text="(Imsak, Fajr, Sunrise, Dhuhr, Asr, Maghrib, Sunset, Isha, Midnight)" />
             <TextBlock Style="{DynamicResource SettingSubTitleLabel}" Text="Example: 0, -5, -4, 1" />
         </StackPanel>
 
         <TextBox Grid.Column="1"
-                 MinWidth="100"
-                 MaxWidth="360"
-                 HorizontalAlignment="Left"
-                 VerticalAlignment="Center"
-                 Text="{Binding Settings.Tune}"
-                 TextWrapping="NoWrap"
-                 Margin="0,0,18,0"/>
+            MinWidth="250"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            Text="{Binding Settings.Tune}"
+            TextWrapping="NoWrap"
+            Margin="0,0,45,0"/>
     </Grid>
         </Border>
 
